<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">
<GridLayout
    android:columnCount="2"
    android:rowCount="8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        style="@style/TitleText"
        android:text="@string/registration"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/fio"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="match_parent"
        android:hint="@string/fio"
        android:inputType="textPersonName"
        />
     <Spinner
         android:layout_column="0"
         android:layout_row="2"
         android:hint="@string/group"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:id="@+id/groups"
         android:autofillHints="если нет группы, выберите по умолчанию"
         />
<EditText
     android:layout_column="0"
     android:layout_row="3"
     android:layout_width="match_parent"
     android:hint="@string/login_r"
     android:inputType="text"
     android:id="@+id/login_r"
    />
    <EditText
        android:layout_column="0"
        android:layout_row="4"
        android:layout_width="match_parent"
        android:hint="@string/password_r"
        android:inputType="textPassword"
        android:id="@+id/password_r"
        />
<EditText
    android:layout_column="0"
    android:layout_row="5"
    android:layout_width="match_parent"
    android:hint="@string/phone"
    android:inputType="phone"
    android:id="@+id/phone"
    />
    <EditText
        android:layout_column="0"
        android:layout_row="6"
        android:layout_width="match_parent"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/buttonReg"
        android:text="@string/buttonN" />
</GridLayout>

</LinearLayout>